Modificación en los controladores de los tipos de usuarios
- Asignación de habilidades a los Tokens de acceso. Cada tipo de usuario tiene una habilidad con respecto al tipo.

- Rutas generadas:
	- [POST] api/client/barbershop_affiliate: Afiliarse a una barbería -> requiere[barbershop_id, Cliente autenticado y verificado]
	- [POST] api/root/create_owner: Crear un Dueño -> requiere[name, email, phone]
	- [POST] api/owner/create_barber: Crear un Barbero -> requiere[name, email, phone, barbershop_id]

- Creación de un middleware para verificar si los usuarios tienen el correo validado.

- Agregación de un paquete para cambiar a español el idioma de los mensajes de error generados por la aplicación.
