# app/Http/Controllers/Api/Root/RootController.php
@@ -1,64 +1,64 @@
 <?php
 
-namespace App\Http\Controllers\Auth\Register;
+namespace App\Http\Controllers\Api\Root;
 
 use App\Http\Controllers\Controller;
 use App\Models\Profile;
 use App\Models\Role;
 use App\Models\User;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 
-class RegisterController extends Controller
+use function Symfony\Component\String\b;
+
+class RootController extends Controller
 {
     /**
      * @OA\Post(
-     *     path="/api/auth/register",
-     *     operationId="Register",
-     *     tags={"Autenticación"},
-     *     summary="Registrarse",
-     *     description="Si el usuario no está registrado, puede registrarse en la aplicación con sus datos personales, al hacer esto se genera un token para él, que le permite acceder a las rutas protegidas",
+     *     path="/api/root/create_owner",
+     *     operationId="CreateOwner",
+     *     tags={"Root"},
+     *     summary="Crear propietario",
+     *     description="Crea un nuevo propietario en la aplicación",
+     *     security={{"ApiKeyAuth": {}}},
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\MediaType(
      *            mediaType="multipart/form-data",
      *            @OA\Schema(
      *               type="object",
-     *               required={"name", "email", "phone", "password", "password_confirmation"},
+     *               required={"name", "email", "phone"},
      *               @OA\Property(property="name", type="string", example=""),
      *               @OA\Property(property="email", type="string", example=""),
      *               @OA\Property(property="phone", type="number", example=""),
-     *               @OA\Property(property="password", type="string", example=""),
-     *               @OA\Property(property="password_confirmation", type="string", example="")
      *            ),
      *        ),
      *         @OA\MediaType(
      *            mediaType="application/json",
      *            @OA\Schema(
      *               type="object",
-     *               required={"name", "email", "phone", "password", "password_confirmation"},
+     *               required={"name", "email", "phone"},
      *               @OA\Property(property="name", type="string", example=""),
      *               @OA\Property(property="email", type="string", example=""),
      *               @OA\Property(property="phone", type="number", example=""),
-     *               @OA\Property(property="password", type="string", example=""),
-     *               @OA\Property(property="password_confirmation", type="string", example="")
      *            ),
      *        ),
      *    ),
-     *      @OA\Response(response=200, description="Usuario registrado correctamente"),
+     *      @OA\Response(response=200, description="Propietario registrado correctamente"),
      *      @OA\Response(response=400, description="Solicitud incorrecta"),
+     *      @OA\Response(response=401, description="Debe verificar su correo electrónico para continuar."),
      *      @OA\Response(response=404, description="Recurso no encontrado"),
      *      @OA\Response(response=422, description="Error de validación, verifique los campos"),
      * )
      */
-    public function register(Request $request)
+    public function createOwner(Request $request)
     {
         // Validaciones
         $validator = Validator::make($request->all(), [
             'name' => 'required|string',
             'email' => 'required|email|unique:users,email',
             'phone' => 'required|numeric|digits:10|unique:users,phone',
-            'password' => 'required|min:8|confirmed',
         ]);
 
         if ($validator->fails()) {
@@ -69,33 +69,25 @@ class RegisterController extends Controller
             ], 422);
         }
 
-        // Usuario
-        User::create([
+        $user = User::create([
             "name" => $request->name,
             "email" => $request->email,
             "phone" => $request->phone,
-            "password" => bcrypt($request->password),
+            // lo siguiente no debería ir aquí, pero por fines de prueba lo dejé
+            'email_verified_at' => Carbon::now()->format('Y-m-d H:i:s'),
+            "password" => bcrypt($request->phone),
         ]);
 
-        // Vincular el usuario con el rol correspondiente en el perfil
         Profile::create([
-            'user_id' => User::where('email', $request->email)->first()->id,
-            'role_id' => Role::where('name', 'client')->first()->id,
+            'user_id' => $user->id,
+            'role_id' => Role::where('name', 'owner')->first()->id,
         ]);
 
-        $user = User::where('email', $request->email)->first();
-
-        // Enviar el código de verificación
-        $user->sendVerificationCode();
-
-        // Crear el token de acceso
-        $token = $user->createToken($request->email, ['client'])->plainTextToken;
+        // Enviar el correo al propietario (pendiente)
 
         return response()->json([
             'success' => 1,
-            'message' => 'A su correo electrónico se le ha enviado un código de verificación',
-            'role' => 'client',
-            'token' => $token,
+            'message' => 'Usuario registrado correctamente',
         ], 200);
     }
 }
